src/objects/FIT_DeepLinkDummy__c.object
<CustomObject>
    <description>FIT Project - Used for SF1 deeplink workaround to store data</description>
    <fields>
        <fullName>FIT_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIT Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>DeepLinkDummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIT_Serial_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIT Serial # Found?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIT_Serial_Value__c</fullName>
        <label>FIT Serial Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Transaction_Record_Type_Id__c</fullName>
        <description>Converts the Record Type Id field from the Transaction table to 18 characters</description>
        <formula>CASESAFEID(FIT_Transaction__r.RecordTypeId)</formula>
        <label>FIT Transaction Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIT Transaction</label>
        <referenceTo>Transactions__c</referenceTo>
        <relationshipName>DeepLinkDummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FIT DeepLinkDummy</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>DeepLinkDummy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FIT DeepLinkDummy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>